Fix profile image clipping on home page
Replace broken translateY centering with flexbox to prevent image from being cut off at the top of the viewport.

--- a/src/components/OverviewPanel.scss
+++ b/src/components/OverviewPanel.scss
@@ -1,10 +1,11 @@
 
 .overview-panel {
-  margin: auto;
-  top: 50%;
-  position: relative;
-  transform: translateY(-50%);
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+
   .profile-image {
     width: 200px;
     height: 200px;
